--- a/SnowBoardReview/Views/Home/Index.cshtml
+++ b/SnowBoardReview/Views/Home/Index.cshtml
@@ -3,13 +3,18 @@
     Layout = null;
 }
 
+
 <!DOCTYPE html>
 
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Index</title>
+
+
 </head>
 <body>
+    <h1>Hello!</h1>
+
 </body>
 </html>
