Added Review Repository Class

--- a/SnowBoardReview/Views/Home/Index.cshtml
+++ b/SnowBoardReview/Views/Home/Index.cshtml
@@ -2,6 +2,7 @@
 @{
     Layout = null;
 }
+    @using SnowBoardReview.Controllers;
 
 
 <!DOCTYPE html>
@@ -10,11 +11,9 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Index</title>
-
-
 </head>
 <body>
     <h1>Hello!</h1>
-
+    @ReviewRepository.review.ProductImage
 </body>
 </html>
