--- a/SnowBoardReview/Views/Home/Index.cshtml
+++ b/SnowBoardReview/Views/Home/Index.cshtml
@@ -13,12 +13,12 @@
     <title>Index</title>
 </head>
 <body>
-      @foreach (var review in Model)
-      {
-       <p>Product name: @review.ProductName</p>
-      <p>product description: @review.ProductDescription</p>
-      <p>Category Name: @review.CategoryName</p>
-      <hr />
-      }
+    @foreach (var review in Model)
+    {
+        <p>Product name: <a href="https://localhost:44307/home/details" target=_blank>@review.ProductName</a></p>
+        <p>product description: @review.ProductDescription</p>
+        <p>Category Name: @review.CategoryName</p>
+        <hr />
+    }
 </body>
 </html>
