broke some stuff- got the hyperlink to work, just need the right html reference

--- a/SnowBoardReview/Views/Home/Details.cshtml
+++ b/SnowBoardReview/Views/Home/Details.cshtml
@@ -2,21 +2,25 @@
 @{
     Layout = null;
 }
+@using SnowBoardReview.Controllers;
+
 
 <!DOCTYPE html>
 
 <html>
-<head>: 
+<head>
+    :
     <meta name="viewport" content="width=device-width" />
     <title>Reviews</title>
 </head>
 <body>
-        <h1>HI</h1>
+    <h1>HI</h1>
+    
     @Model.ReviewID
     @Model.ProductName
     @Model.ProductDescription
     @Model.UserReview
 
-    
+
 </body>
 </html>
