working review links- started layout page

--- a/SnowBoardReview/Views/Home/Details.cshtml
+++ b/SnowBoardReview/Views/Home/Details.cshtml
@@ -1,26 +1,13 @@
 ﻿@model SnowBoardReview.Models.Review
 @{
-    Layout = null;
+    Layout = "_layout";
 }
 @using SnowBoardReview.Controllers;
 
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    :
-    <meta name="viewport" content="width=device-width" />
-    <title>Reviews</title>
-</head>
-<body>
-    <h1>HI</h1>
     
     @Model.ReviewID
     @Model.ProductName
     @Model.ProductDescription
     @Model.UserReview
 
-
-</body>
-</html>
