--- a/SnowBoardReview/Views/Home/Details.cshtml
+++ b/SnowBoardReview/Views/Home/Details.cshtml
@@ -5,9 +5,12 @@
 @using SnowBoardReview.Controllers;
 
 
-    
-    @Model.ReviewID
-    @Model.ProductName
-    @Model.ProductDescription
-    @Model.UserReview
+<box>
+@Model.ReviewID
+@Model.ProductName
+@Model.ProductDescription
+@Model.UserReview;
+</box>
+
+
 
