--- a/SnowBoardReview/Views/Shared/_layout.cshtml
+++ b/SnowBoardReview/Views/Shared/_layout.cshtml
@@ -3,9 +3,10 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
+    <link href="@Url.Content("./CSS/_layoutStyle.css")" rel="stylesheet" />
+    @*@RenderSection("styles", false)*@
 </head>
 <body>
     @RenderBody()
-
 </body>
 </html>
