layout/css making it pretty

--- a/SnowBoardReview/Views/Home/Details.cshtml
+++ b/SnowBoardReview/Views/Home/Details.cshtml
@@ -7,8 +7,8 @@
 
 
 
-<p>@Model.ProductDescription</p>
-<p>@Model.UserReview</p>
+<p><h2>@Model.ProductDescription</h2></p>
+<box><p>@Model.UserReview</p></box>
 
 <img src="@Model.ProductImage" alt="board1" />
 <p><a href="~/Home/Index">Product Catalog</a></p>
