--- a/SnowBoardReview/Views/SnowboardBrand/Index.cshtml
+++ b/SnowBoardReview/Views/SnowboardBrand/Index.cshtml
@@ -7,7 +7,7 @@
 @foreach (var brand in Model)
 {
 
-<a href="/brand/details/@brand.ID"><img src="@brand.BrandImage" alt="Brand Images" /></a>
+<a href="/snowboard/Brand/@brand.ID"><img src="@brand.BrandImage" alt="Brand Images" /></a>
 <p>@brand.Brand</p>
     
 }
