--- a/SnowBoardReview/Views/SnowboardBrand/Index.cshtml
+++ b/SnowBoardReview/Views/SnowboardBrand/Index.cshtml
@@ -4,11 +4,13 @@
 }
 @using SnowBoardReview.Controllers;
 
-@foreach (var brand in Model)
-{
+<h1>Team X Board Shack</h1>
 
-<a href="/snowboard/Brand/@brand.ID"><img src="@brand.BrandImage" alt="Brand Images" /></a>
-<p>@brand.Brand</p>
-    
-}
-
+<brandmain>
+    <section id="brands">
+        @foreach (var brand in Model)
+        {
+            <a href="/snowboard/Brand/@brand.ID"><img src="@brand.BrandImage" alt="Brand Images" /></a>
+        }
+    </section>
+</brandmain>
