--- a/SnowBoardReview/wwwroot/CSS/_layoutStyle.css
+++ b/SnowBoardReview/wwwroot/CSS/_layoutStyle.css
@@ -1,18 +1,91 @@
 ﻿*{
     min-width: 200px;
+    margin: 0;
+    padding: 0;
 }
-
-body {
-    background-color: lightgray;
-    font-family: 'Microsoft Sans Serif';
-    margin: 0 10vw;
-}
-
 
 h1{
     text-align: center;
+    padding: 5vh 0 8vh 0;
+    font-family: Monoton;
+    font-size: 14vh;
 }
 
 box p{
     width: 50vw;
 }
+
+#brands{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    padding: 5vh 0 5vh 0;
+}
+
+header {
+    display: flex;
+    background: linear-gradient(to bottom right, darkslategray, gray 99%);
+    justify-content: space-between;
+}
+
+ul {
+    list-style: none;
+}
+
+
+ul {
+    list-style: none;
+}
+
+.navbutton {
+    background: linear-gradient(to bottom right, darkslategray, gray 99%);
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 13px;
+}
+
+    .navbutton:hover {
+        background-color: rgb(0, 181, 236);
+
+    }
+
+nav {
+    padding: 0px 0px 0px 0px;
+    max-width: 100vw;
+    min-width: 100vw;
+}
+
+    nav ul {
+        display: flex;
+        justify-content: space-between;
+        width: 25%;
+        font-size: 13px;
+        color: white;
+    }
+
+body {
+    background-image: url("/Images/mountainbackground.jpeg");
+    background-size: cover;
+}
+
+footer {
+    display: flex;
+    padding: 0 0 0 0;
+    background: linear-gradient(to bottom right, darkslategray, gray 99%);
+    border-top: 2px solid black;
+    max-width: 100vw;
+    color: white;
+    text-align: center;
+    justify-content: center;
+    padding: 2em 0 1em 0;
+}
+
+    footer cr {
+        display: flex;
+        width: 50%;
+        padding: 0 0% 0 0;
+    }
