--- a/SnowBoardReview/Views/Snowboard/Brand.cshtml
+++ b/SnowBoardReview/Views/Snowboard/Brand.cshtml
@@ -13,7 +13,9 @@
 {
     <a href="/review/Index/@snowboard.ID"><img src="@snowboard.ProductImage" alt="Product Images" /></a>
     <p>@snowboard.ModelName</p>
+    <p>@snowboard.ModelDescription</p>
 }
+
 
 
 
