made K2 brand a vector and resized

--- a/SnowBoardReview/Views/SnowboardBrand/Index.cshtml
+++ b/SnowBoardReview/Views/SnowboardBrand/Index.cshtml
@@ -10,7 +10,7 @@
     <section id="brands">
         @foreach (var brand in Model)
         {
-            <a href="/snowboard/Brand/@brand.ID"><img src="@brand.BrandImage" alt="Brand Images" /></a>
+            <a href="/snowboard/Brand/@brand.ID"><img src="@brand.BrandImage" width=13% alt="Brand Images" /></a>
         }
     </section>
 </brandmain>
