added delete and added more links

--- a/SnowBoardReview/Views/Review/Index.cshtml
+++ b/SnowBoardReview/Views/Review/Index.cshtml
@@ -11,4 +11,8 @@
 
     <p>@review.UserReview</p>
 
+
+    <a href="/review/Delete" class="w3-button w3-black">Delete Review</a>
+
 }
+    <p><a href="/review/create" class="w3-button w3-black">Create Review</a></p>
