--- a/SnowBoardReview/Views/Review/Delete.cshtml
+++ b/SnowBoardReview/Views/Review/Delete.cshtml
@@ -26,10 +26,10 @@
             @Html.DisplayFor(model => model.UserReview)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Snowboard)
+            @Html.DisplayNameFor(model => model.Board)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Snowboard.ID)
+            @Html.DisplayFor(model => model.Board.ID)
         </dd>
     </dl>
 
