--- a/SnowBoardReview/Views/Snowboard/Brand.cshtml
+++ b/SnowBoardReview/Views/Snowboard/Brand.cshtml
@@ -14,7 +14,9 @@
     <a href="/review/Index/@snowboard.ID"><img src="@snowboard.ProductImage" alt="Product Images" /></a>
     <p>@snowboard.ModelName</p>
     <p>@snowboard.ModelDescription</p>
+    <p><a href="/review/create/@snowboard.ID" class="w3-button w3-black">Create Review</a></p>
 }
+
 
 
 
