--- a/SnowBoardReview/Views/Review/Create.cshtml
+++ b/SnowBoardReview/Views/Review/Create.cshtml
@@ -15,10 +15,9 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="CategoryName" class="control-label"></label>
-                <input asp-for="CategoryName" class="form-control" />
-                <span asp-validation-for="CategoryName" class="text-danger"></span>
+                <input asp-for="BoardID" type="hidden" value="@ViewBag.SnowBoardId" class="form-control" />
             </div>
+             
             <div class="form-group">
                 <label asp-for="UserReview" class="control-label"></label>
                 <input asp-for="UserReview" class="form-control" />
