--- a/SnowBoardReview/wwwroot/CSS/_layoutStyle.css
+++ b/SnowBoardReview/wwwroot/CSS/_layoutStyle.css
@@ -85,5 +85,44 @@ footer {
     padding: 2em 0 1em 0;
 }
 
+.snowboards {
+    display: flex;
+    justify-content: center;
+    background-color: white;
+    border: 2px solid black;
+    max-width: 100vw;
+    width: 100vw;
+    color: black;
+    text-align: left;
+    text-decoration: none;
+    display: inline-block;
+    align-items: center;
+}
+
+    .snowboards:hover {
+        background-color: aquamarine;
+        background-size: cover;
+        color: white;
+    }
+
+boardview {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 0 5vw 0 5vw;
+    align-items: center;
+    text-align: center;
+    font-size: 18px;
+}
+
+    boardview div {
+        justify-content: space-between;
+        align-items: center;
+        text-align: center;
+        font-size: 35px;
+    }
+
+
+
     
     
