delete button works yaayyyy

--- a/SnowBoardReview/Views/Review/Index.cshtml
+++ b/SnowBoardReview/Views/Review/Index.cshtml
@@ -12,7 +12,7 @@
     <p>@review.UserReview</p>
 
 
-    <a href="/review/Delete" class="w3-button w3-black">Delete Review</a>
+    <a href="/review/Delete/@review.ReviewID" class="w3-button w3-black">Delete Review</a>
 
 }
    
