--- a/SnowBoardReview/Views/Review/Delete.cshtml
+++ b/SnowBoardReview/Views/Review/Delete.cshtml
@@ -34,7 +34,7 @@
     </dl>
 
     <form asp-action="Delete">
-        <input type="hidden" asp-for="ReviewID" />
+        <input type="hidden" value="@ViewBag.ReviewId" asp-for="ReviewID" />
         <input type="submit" value="Delete" class="btn btn-default" /> |
         <a asp-action="Index">Back to List</a>
     </form>
