--- a/SnowBoardReview/Views/Snowboard/Brand.cshtml
+++ b/SnowBoardReview/Views/Snowboard/Brand.cshtml
@@ -18,6 +18,7 @@
                 <p>@snowboard.ModelName</p>
             </div>
             <p>@snowboard.ModelDescription</p>
+            <a href="/review/Create/@snowboard.ID" class="w3-button w3-black">Create Review</a>
         </boardview>
     </a>
 
