finished edit button

--- a/SnowBoardReview/Views/Review/Delete.cshtml
+++ b/SnowBoardReview/Views/Review/Delete.cshtml
@@ -14,19 +14,13 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.CategoryName)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.CategoryName)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.UserReview)
+           <strong>@Html.DisplayNameFor(model => model.UserReview)</strong>
         </dt>
         <dd>
             @Html.DisplayFor(model => model.UserReview)
         </dd>
         <dt>
-            @Html.DisplayNameFor(model => model.Board)
+            <strong>@Html.DisplayNameFor(model => model.Board)</strong>
         </dt>
         <dd>
             @Html.DisplayFor(model => model.Board.ModelName)
