--- a/SnowBoardReview/Views/Review/Index.cshtml
+++ b/SnowBoardReview/Views/Review/Index.cshtml
@@ -11,8 +11,9 @@
 
     <p>@review.UserReview</p>
 
+    <a href="/review/Edit/@review.ReviewID" class="w3-button w3-black">Edit Review</a>
 
     <a href="/review/Delete/@review.ReviewID" class="w3-button w3-black">Delete Review</a>
 
+
 }
-   
