--- a/SnowBoardReview/Views/Snowboard/Brand.cshtml
+++ b/SnowBoardReview/Views/Snowboard/Brand.cshtml
@@ -18,9 +18,9 @@
                 <p>@snowboard.ModelName</p>
             </div>
             <p>@snowboard.ModelDescription</p>
-            <a href="/review/Create/@snowboard.ID" class="w3-button w3-black">Create Review</a>
         </boardview>
     </a>
+            <a href="/review/Create/@snowboard.ID" class="snowboardscreate">Create Review</a>
 
 }
 
