--- a/SnowBoardReview/Views/Shared/_layout.cshtml
+++ b/SnowBoardReview/Views/Shared/_layout.cshtml
@@ -12,8 +12,8 @@
             <ul>
                 <a href="/snowboardbrand/Index"><li class="navbutton">Home</li></a>
                 <a href="/snowboardbrand/Index"><li class="navbutton">Brands</li></a>
-                <a href="/snowboardbrand/Index"><li class="navbutton">Snowboards</li></a>
-                <a href="/snowboardbrand/Index"><li class="navbutton">Add Review</li></a>
+                <a href="/snowboard/Index"><li class="navbutton">Snowboards</li></a>
+                <a href="/Review/AllReviews"><li class="navbutton">Reviews</li></a>
             </ul>
         </nav>
     <body>
