--- a/SnowBoardReview/wwwroot/CSS/_layoutStyle.css
+++ b/SnowBoardReview/wwwroot/CSS/_layoutStyle.css
@@ -100,9 +100,12 @@ footer {
 }
 
     .snowboards:hover {
-        background-color: aquamarine;
+        box-shadow: 10px 10px 10px black;
         background-size: cover;
-        color: white;
+        color: black;
+        background-color: lightgray;
+        margin: 0 0 3px 0;
+
     }
 
 boardview {
@@ -122,7 +125,34 @@ boardview {
         font-size: 35px;
     }
 
+.snowboardscreate {
+    display: flex;
+    justify-content: center;
+    background-color: rgb(197, 241, 255);
+    width: 100vw;
+    color: black;
+    text-align: center;
+    text-decoration: none;
+    align-items: center;
+    height: 5vh;
+    font-size: 17.5px;
+}
 
+    .snowboardscreate:hover {
+        background-color: rgb(87, 163, 168);
+        box-shadow: 10px 10px 10px black;
+    }
+
+h2{
+    font-size: 50px;
+}
+
+revs p{
+    padding-top:5vh;
+    font-size: 25px;
+    text-align:center;
+    background-blend-mode: color-burn;
+}
 
     
     
